infra: db migration